@@ -17,6 +17,7 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Changed
 
+* HARDWARERAIDTOOL: Add perccli and perccli2 support
 * LDAP_BACKUP_PATH: Improve detection of ldap.bak
 * POSTGRES_BACKUP_PATH: Improve detection of pg.dump.bak
 * SQL_BACKUP_PATH: Improve backup detection for mariadb
